// Use scripts/gen.sh to generate .pb.go files.
syntax = "proto3";

package pb;
option go_package = "github.com/feichai0017/NoKV/pb";

// ManifestChangeSet groups manifest edits that should be applied atomically.
message ManifestChangeSet {
  // A set of changes that are applied atomically.
  repeated ManifestChange changes = 1;
}

// ManifestChange describes one manifest delta generated by compaction/flush.
message ManifestChange {
  uint64 Id = 1;

  enum Operation {
    CREATE = 0;
    DELETE = 1;
  }

  Operation Op = 2;
  uint32 Level = 3; // Only used for CREATE
  bytes Checksum = 4; // Only used for CREATE
}

// TableIndex is the protobuf-encoded SSTable index block payload.
message TableIndex {
  repeated BlockOffset offsets = 1;
  bytes bloomFilter = 2;
  uint64 maxVersion = 3;
  uint32 keyCount = 4;
  uint32 staleDataSize = 5;
  uint64 valueSize = 6;
}

// BlockOffset points to a single data block inside one SSTable file.
message BlockOffset {
  bytes key = 1;
  uint32 offset = 2;
  uint32 len = 3;
}
